ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Trivial - P5
    • 2.5.4
    • Affects Version/s: None
    • Component/s: Text Search
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In src/mongo/db/fts/fts_command_mongod.cpp, the "too many text index for" error message is not grammatical:

      100  if ( idxMatches.size() > 1 ) {
      101      errmsg = str::stream() << "too many text index for: " << ns;
      102      return false;
      103  }
      

      Version:
      $ git rev-parse HEAD
      47cacf3a19f9b15fe5f586483b3f3992bb12e7bf

            Assignee:
            J Rassi (Inactive)
            Reporter:
            Kamran K. (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: