SERVER-11667 Fix typo in text command error message